# chaos-engine

./: .env.example  .gitignore  CONTRIBUTING.md  Caddyfile  Caddyfile.example  Cargo.toml  Dockerfile  README.en.md  README.md  SECURITY.md  crucix-rewrite-spec.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  reference-jarvis.html  rust-toolchain.toml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-publish.yml
chaos-types/: event.schema.json  market-seed.schema.json  sweep.schema.json
dashboard/public/: jarvis.html
docs/: api.md  economics-zh.md  economics.md  openapi.yaml  source-plugin-guide.md
docs/api/: chaos-engine-openapi.yaml  newspredict-openapi.yaml
lib/alerts/: telegram.mjs
newspredict/: .env.example  Dockerfile  drizzle.config.ts  hardhat.config.ts  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
newspredict/contracts/: ChaosPredictionMarket.sol  ChaosToken.sol  CrucixToken.sol  PredictionMarket.sol
newspredict/docs/: usage-guide.md
newspredict/public/: manifest.json  sw.js
newspredict/scripts/: ChaosPredictionMarket.flat.sol  ChaosToken.flat.sol  deploy.ts  download-category-images.sh  gen-category-images.mjs  verify.ts
scripts/: backup.sh  deploy.sh  dev-start.ps1  dev-start.sh  update-live-ids.sh
src/: briefing.rs  config.rs  correlation.rs  error.rs  http.rs  logging.rs  main.rs  notify.rs  report.rs  store.rs  term.rs  util.rs  watchlist.rs
static/: dashboard.html
tests/: sweep_test.rs
(+168 files in other folders)
